# psi-bench

./: .gitignore  .gitmodules  CLAUDE.md  README.md  main.py  pyproject.toml
examples/: retail_quickstart.py  retail_qwen3_4b.py  test_sglang_qwen3_4b.py
scripts/: eval_retail_task_accuracy.py  eval_retail_task_accuracy.sh  install_deps.sh  run_retail_example.sh  serve_qwen3_4b.sh  slurm_serve_and_eval.sbatch  task_output_stats.py  test_eval_components.sh
src/psibench/: __init__.py
src/psibench/agents/: __init__.py  base.py  factory.py  llm.py  strategies.py  trajectory.py
src/psibench/envs/: __init__.py  base.py
src/psibench/envs/airline/: __init__.py  env.py  tasks_test.py
src/psibench/envs/airline/tools/: book_reservation.py  calculate.py  cancel_reservation.py  get_reservation_details.py  get_user_details.py  list_all_airports.py  search_direct_flight.py  search_onestop_flight.py  send_certificate.py  think.py  transfer_to_human_agents.py  update_reservation_baggages.py  update_reservation_flights.py  update_reservation_passengers.py
src/psibench/envs/retail/: __init__.py  env.py  tasks_dev.py  tasks_test.py  tasks_train.py
src/psibench/envs/retail/tools/: calculate.py  cancel_pending_order.py  exchange_delivered_order_items.py  find_user_id_by_email.py  find_user_id_by_name_zip.py  get_order_details.py  get_product_details.py  get_user_details.py  list_all_product_types.py  modify_pending_order_address.py  modify_pending_order_items.py  modify_pending_order_payment.py  modify_user_address.py  return_delivered_order_items.py  think.py  transfer_to_human_agents.py
src/psibench/judges/: __init__.py  base.py  factory.py  http_judge.py  llm_judge.py
src/psibench/models/: __init__.py  client.py
src/psibench/schemas/: __init__.py  config.py  messages.py  reward.py
src/psibench/tools/: __init__.py  base.py
src/psibench/users/: __init__.py  base.py  factory.py  llm_user.py
src/psibench/utils/: __init__.py  parsing.py
tests/: test_smoke.py
